# assembly_environment

./: CMakeLists.txt  README.md  package.xml
meshes/: camera.STL
urdf/: Assembly_Environment.csv  Assembly_Environment.urdf  environment.xacro
