<?xml version="1.0"?>
<package format="3">
  <name>assembly_environment</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Assembly_Environment</p>
    <p>This package contains configuration data, 3D models and launch files for the robot environment.</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">Maintainer Name</maintainer>
  <license>BSD</license>

  <!-- Build Tool (ROS 2 Standard) -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies required to build (usually headers/CMake configuration) -->
  <build_depend>xacro</build_depend>
  <build_depend>urdf</build_depend>

  <!-- Dependencies required to run/execute launch files -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend> <!-- ROS 2 Gazebo package -->
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
